--- a/optimization/_h/optimization.ipynb
+++ b/optimization/_h/optimization.ipynb
@@ -112,7 +112,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Optimize redundant selection: examine rate change"
    ]
@@ -123,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for step_size in [0.01, 0.02, 0.03, 0.04, 0.05, 0.1]:\n",
+    "for step_size in [0.01, 0.02, 0.03, 0.04, 0.05, 0.10]:\n",
     "    dRFEtools.optimize_lowess_plot(d, fold, outdir, frac=0.3, step_size=step_size, \n",
     "                                   classify=True, save_plot=True)"
    ]
@@ -174,8 +176,8 @@
    "source": [
     "# Create a dataset with only 10 informative features\n",
     "X, y = make_regression(\n",
-    "    n_samples=500, n_features=20000, n_informative=200, bias=0.2,\n",
-    "    n_targets=1, noise=10, random_state=13\n",
+    "    n_samples=500, n_features=20000, n_informative=400, bias=0.02,\n",
+    "    n_targets=1, noise=5, random_state=13\n",
     ")\n",
     "cv = KFold(n_splits=5, shuffle=True, random_state=13)\n",
     "regr = dRFEtools.RandomForestRegressor(n_estimators=100, oob_score=True, \n",
@@ -390,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
